Tue Mar  7 19:30:05 1995  Per Bothner  <bothner@kalessin.cygnus.com>

	* string.ch, string.exp, Makefile.in:  New test case.

Mon Mar  6 14:11:01 1995  Per Bothner  <bothner@kalessin.cygnus.com>

	* tuples.ch (setnmode);  New module.
	* tuples.exp:  Add some extra tests.

Sat Mar  4 15:16:17 1995  Per Bothner  <bothner@kalessin.cygnus.com>

	* callch.ch, callch.exp, Makefile.in:  New test case.

Thu Mar  2 06:17:41 1995  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* misc.exp: If executable does not exist, issue warning and skip
	remaining tests, like other chill tests.

Wed Mar  1 20:28:42 1995  Per Bothner  <bothner@kalessin.cygnus.com>

	* misc.ch, misc.exp, Makefile.in:  New test case.

Mon Feb 20 16:19:58 1995  Per Bothner  <bothner@kalessin.cygnus.com>

	* chillvars.ch:  Add missing INIT's.
	* chillvars.exp:  Allow builtin types as either case. E.g. (BOOL|bool).
	* pr-5016.exp:  Likewise.

Sun Feb 12 11:26:08 1995  Per Bothner  <bothner@kalessin.cygnus.com>

	* pr-6292.ch, pr-6292.exp, Makefile.in:  New test case.

Wed Feb  1 13:09:48 1995  Per Bothner  <bothner@kalessin.cygnus.com>

	* tuples.ch, tuples.exp, Makefile.in:  New test case.

Mon Nov 28 18:39:08 1994  Per Bothner  <bothner@kalessin.cygnus.com>

	* pr-5984.ch, pr-5984.exp, Makefile.in:  New test case.

Fri Sep 16 16:55:03 1994  Per Bothner  (bothner@kalessin.cygnus.com)

	* pr-5646.ch, pr-5646-grt.ch, pr-5646.exp, Makefile.in: New testcase.

Tue Sep  6 13:21:27 1994  Per Bothner  (bothner@kalessin.cygnus.com)

	* pr-5016.ch, pr-5016.exp, Makefile.in:  New testcase.
	* Makefile.in (.exe.check):  New rule, to run just one test.

Tue Jun 14 16:20:18 1994  Per Bothner  (bothner@kalessin.cygnus.com)

	* result.ch, result.exp, Makefile.in:  New test case.
	* pr-4975.ch, pr-4975-grt.ch, pr-4975.exp, Makefile.in:  Ditto.

Thu Jun  9 15:20:43 1994  Per Bothner  (bothner@kalessin.cygnus.com)

	* pr-5022.ch, pr-5022.exp:  New testcase.
	* chillvars.exp:  Remove spurious newline.
