@@ -291,6 +291,8 @@ proc test_structs {} {
 set binfile "chillvars.exe"
 set srcfile $binfile.ch
 
+if [skip_chill_tests] then { continue }
+
 if ![file exists $objdir/$subdir/$binfile] then {
     warning "$binfile does not exist; tests suppressed."
 } else {
