@@ -51,6 +51,8 @@ proc do_tests {} {
 set binfile "pr-4975.exe"
 set srcfile $binfile.ch
 
+if [skip_chill_tests] then { continue }
+
 if ![file exists $objdir/$subdir/$binfile] then {
 	warning "$objdir/$subdir/$binfile does not exist; tests suppressed."
 } else {
