@@ -79,6 +79,8 @@ proc test_pr_5020 {} {
 set binfile "pr-5020.exe"
 set srcfile $binfile.ch
 
+if [skip_chill_tests] then { continue }
+
 if ![file exists $objdir/$subdir/$binfile] then {
 	warning "$objdir/$subdir/$binfile does not exist; tests suppressed."
 } else {
