@@ -51,6 +51,8 @@ proc do_tests {} {
 set binfile "pr-5984.exe"
 set srcfile $binfile.ch
 
+if [skip_chill_tests] then { continue }
+
 if ![file exists $objdir/$subdir/$binfile] then {
     warning "$binfile does not exist; tests suppressed."
 } else {
